# Rag

./: .gitignore  AGENTS.md  MODULES.md  README.md  docker-compose.observability.yml  pom.xml
agent-service/: README.md  pom.xml
docs/: architecture.md
documents/: 01-order-submission-guide.md  02-order-confirmation-payment.md  03-order-tracking-lifecycle.md  04-order-cancellation-policy.md  05-modify-shipping-address.md  06-logistics-delivery-overview.md  07-express-delivery-service.md  08-cross-border-logistics.md  09-balance-wallet-management.md  10-refund-process.md  11-return-exchange-policy.md  12-after-sales-service.md  13-coupon-discount-rules.md  14-membership-points.md  15-invoice-management.md  16-payment-methods.md  17-shopping-cart-management.md  18-account-security.md  19-order-exceptions-disputes.md  20-customer-service-channels.md
evaluation-service/: README.md  pyproject.toml  requirements.txt
evaluation-service/src/evaluation_service/: agent_client.py  api.py  cli.py  config.py  dataset.py  evaluator.py  metrics.py  ragas_runner.py  schemas.py
evaluation-service/tests/: test_api_security.py  test_dataset.py  test_evaluator.py  test_ragas_runner.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
knowledge-base/: 01-rag-concept-overview.md  02-rag-system-architecture.md  03-rag-vs-finetuning.md  04-document-parsing-tika.md  05-text-chunking-strategies.md  06-chunk-size-overlap-tuning.md  07-text-embedding-models.md  08-vector-index-ann-pgvector.md  09-dense-retrieval.md  10-bm25-sparse-retrieval.md  (+10 more)
(+403 files in other folders)
