[project]
name = "rag-evaluation-service"
version = "0.1.0"
description = "Standalone RAGAS evaluation module for the Rag workspace."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ragas = [
    "datasets>=2.19.0,<4",
    "langchain-openai>=0.2,<0.3",
    "ragas>=0.2.15,<0.3",
]
test = [
    "pytest>=8.2.0",
    "respx>=0.21.0",
]

[project.scripts]
rag-eval = "evaluation_service.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
